Add to acknowledgments

--- a/tr18/tr18.html
+++ b/tr18/tr18.html
@@ -3920,7 +3920,7 @@ Note: the operation A ~~ B is handled in terms of other operations according to 
 			Heninger.</p>
 		<p>Thanks to Julie Allen, Mathias Bynens,Tom Christiansen, David Corbett, Michael D’Errico,
 			Asmus Freytag, Jeffrey Friedl, Norbert Lindenberg, Peter Linsley,
-			Alan Liu, Kent Karlsson, Jarkko Hietaniemi, Michael Saboff, Gurusamy Sarathy, Markus Scherer, 
+			Alan Liu, Kent Karlsson, Jarkko Hietaniemi, <span class='changed'>Ivan Panchenko,</span> Michael Saboff, Gurusamy Sarathy, Markus Scherer, 
             Xueming Shen, Henry Spencer, Kento Tamura, Philippe Verdy, Tom Watson, 
 			Ken Whistler, Karl Williamson, and Richard Wordingham for their feedback on the document.</p>
 
